Move from Spring Boot to Javalin and upgrade to Java 17

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <title>International Institute of Social History</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
-<body data-timeout="${timeout?c}">
+<body>
 
 <div id="imageContainer" class="container">
   <div class="relative">
